@@ -81,7 +81,7 @@ Container::~Container()
   all_containers_.erase(name_);
 
   // obligation to dump previous events because they might reference the container that is about to be destroyed
-  last_timestamp_to_dump = SIMIX_get_clock();
+  last_timestamp_to_dump = simgrid_get_clock();
   dump_buffer(true);
 
   on_destruction(*this);
